--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,8 @@ development:
   encoding: unicode
   database: ChatApp_development
   pool: 5
-  username: ChatApp
+  username: 
+  host: localhost
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,7 +49,8 @@ test:
   encoding: unicode
   database: ChatApp_test
   pool: 5
-  username: ChatApp
+  username: 
+  host: localhost
   password:
 
 production:
@@ -56,5 +58,5 @@ production:
   encoding: unicode
   database: ChatApp_production
   pool: 5
-  username: ChatApp
+  username: 
   password:
